--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -105,6 +105,8 @@
 \def \kaons{K$^\pm$\xspace}
 \def \proton{p\xspace}
 \def \antiproton{$\bar{\text{p}}$\xspace}
+\def \neutron{n\xspace}
+\def \antineutron{$\bar{\text{n}}$\xspace}
 \def \protons{p($\bar{\text{p}}$)\xspace}
 \def \protonpm{p$^\pm$\xspace}
 \def \lamb{$\Lambda$\xspace}
