--- a/bib_aliases.tex
+++ b/bib_aliases.tex
@@ -19,3 +19,25 @@
 \def\AlexICRC{Herve:2015lra}
 \def\RaulICRC{Prado:2017hub}
 \def\PDGPaper{Patrignani:2016xqp}  
+
+\def\AugerPaper{ThePierreAuger:2015rma}
+\def\AugerHASMuonPaper{Aab:2014pza}
+\def\AugerMPDPaper{Aab:2014dua}
+\def\AugerTopDownPaper{Aab:2016hkv}
+\def\AugerXmaxPRDPaper{Aab:2014kda}
+\def\AugerXmaxICRC2017Paper{Bellido:2017cgf}
+\def\TAXmaxPaper{Jui:2011vm}
+\def\HiResPaper{AbuZayyad:2000uu}
+\def\FlysEyesPaper{Baltrusaitis:1985mx}
+\def\MIAPaper{Borione:1994iy}
+\def\HiResMIAMuonPaper{AbuZayyad:1999xa}
+\def\IceTopMuonPaper{Dembinski:2017zkb}
+\def\IceCubePaper{Aartsen:2016nxy}
+\def\IceTopPaper{IceCube:2012nn}
+\def\TunkaPaper{Antokhonov:2011zz}
+\def\TunkaXmaxPaper{Budnev:2009mc}
+\def\YakutskXmaxPaper{Knurenko:2011zz}
+\def\YakutskPaper{Knurenko:2010eu}
+\def\CasaBlancaXmaxPaper{Fowler:2000si}
+
+
