--- a/lib.bib
+++ b/lib.bib
@@ -2,6 +2,291 @@
 %%%%%%%% PAPERS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
+@inproceedings{Bellido:2017cgf,
+      author         = "Bellido, Jose",
+      title          = "{Depth of maximum of air-shower profiles at the Pierre
+                        Auger Observatory: Measurements above \E{17.2} and
+                        Composition Implications}",
+      booktitle      = "{The Pierre Auger Observatory: Contributions to the 35th
+                        International Cosmic Ray Conference (ICRC 2017)}",
+      collaboration  = "Pierre Auger",
+      url            = "http://inspirehep.net/record/1618417/files/1617990_40-47.pdf",
+      year           = "2017",
+      pages          = "40-47",
+      SLACcitation   = "%%CITATION = INSPIRE-1618417;%%"
+}
+
+@article{Jui:2011vm,
+      author         = "Jui, Charles C. H.",
+      title          = "{Cosmic Ray in the Northern Hemisphere: Results from the
+                        Telescope Array Experiment}",
+      booktitle      = "{Proceedings, 15th International Conference on
+                        Calorimetry in High Energy Physics (CALOR 2012): Santa Fe,
+                        New Mexico, USA, June 4-8, 2012}",
+      collaboration  = "Telescope Array",
+      journal        = "J. Phys. Conf. Ser.",
+      volume         = "404",
+      year           = "2012",
+      pages          = "012037",
+      doi            = "10.1088/1742-6596/404/1/012037",
+      eprint         = "1110.0133",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.IM",
+      SLACcitation   = "%%CITATION = ARXIV:1110.0133;%%"
+}
+
+@article{Fowler:2000si,
+      author         = "Fowler, J. W. and Fortson, L. F. and Jui, C. C. H. and
+                        Kieda, D. B. and Ong, R. A. and Pryke, C. L. and Sommers,
+                        P.",
+      title          = "{A Measurement of the cosmic ray spectrum and composition
+                        at the knee}",
+      journal        = "Astropart. Phys.",
+      volume         = "15",
+      year           = "2001",
+      pages          = "49-64",
+      doi            = "10.1016/S0927-6505(00)00139-0",
+      eprint         = "astro-ph/0003190",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      SLACcitation   = "%%CITATION = ASTRO-PH/0003190;%%"
+}
+@inproceedings{Knurenko:2010eu,
+      author         = "Knurenko, S. P. and Sabourov, A.",
+      title          = "{The depth of maximum shower development and its
+                        fluctuations: cosmic ray mass composition at $E_0 >= 10^{17}$ eV}",
+      booktitle      = "{22nd European Cosmic Ray Symposium (ECRS 2010) Turku,
+                        Finland, August 3-6, 2010}",
+      url            = "http://inspirehep.net/record/871836/files/arXiv:1010.1185.pdf",
+      year           = "2010",
+      doi            = "10.5194/astra-7-251-2011",
+      eprint         = "1010.1185",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:1010.1185;%%"
+}
+
+@article{Knurenko:2011zz,
+      author         = "Knurenko, Stanislav P. and Sabourov, A.",
+      title          = "{Study of cosmic rays at the Yakutsk EAS array: Energy
+                        spectrum and mass composition}",
+      booktitle      = "{100 years of cosmic ray physics: From pioneering
+                        experiments to physics in space. Proceedings,
+                        International Seminar, CRIS 2010, Catania, Italy,
+                        September 13-17, 2010}",
+      journal        = "Nucl. Phys. Proc. Suppl.",
+      volume         = "212-213",
+      year           = "2011",
+      pages          = "241-251",
+      doi            = "10.1016/j.nuclphysbps.2011.03.033",
+      SLACcitation   = "%%CITATION = NUPHZ,212-213,241;%%"
+}
+
+@article{Antokhonov:2011zz,
+      author         = "Antokhonov, B. A. and others",
+      title          = "{A new 1-km**2 EAS Cherenkov array in the Tunka valley}",
+      booktitle      = "{Proceedings, 7th International Workshop on Ring Imaging
+                        Cherenkov Detectors (RICH 2010): Cassis, France, May 3-7,
+                        2010}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A639",
+      year           = "2011",
+      pages          = "42-45",
+      doi            = "10.1016/j.nima.2010.09.142",
+      SLACcitation   = "%%CITATION = NUIMA,A639,42;%%"
+}
+
+@article{IceCube:2012nn,
+      author         = "Abbasi, R. and others",
+      title          = "{IceTop: The surface component of IceCube}",
+      collaboration  = "IceCube",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A700",
+      year           = "2013",
+      pages          = "188-220",
+      doi            = "10.1016/j.nima.2012.10.067",
+      eprint         = "1207.6326",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.IM",
+      SLACcitation   = "%%CITATION = ARXIV:1207.6326;%%"
+}
+
+@article{Aartsen:2016nxy,
+      author         = "Aartsen, M. G. and others",
+      title          = "{The IceCube Neutrino Observatory: Instrumentation and
+                        Online Systems}",
+      collaboration  = "IceCube",
+      journal        = "JINST",
+      volume         = "12",
+      year           = "2017",
+      number         = "03",
+      pages          = "P03012",
+      doi            = "10.1088/1748-0221/12/03/P03012",
+      eprint         = "1612.05093",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.IM",
+      SLACcitation   = "%%CITATION = ARXIV:1612.05093;%%"
+}
+
+@article{Dembinski:2017zkb,
+      author         = "Dembinski, Hans",
+      title          = "{Investigating cosmic rays and air shower physics with
+                        IceCube/IceTop}",
+      booktitle      = "{Proceedings, 19th International Symposium on Very High
+                        Energy Cosmic Ray Interactions (ISVHECRI 2016): Moscow,
+                        Russia, August 22-27, 2016}",
+      collaboration  = "IceCube",
+      journal        = "EPJ Web Conf.",
+      volume         = "145",
+      year           = "2017",
+      pages          = "01003",
+      doi            = "10.1051/epjconf/201614501003",
+      SLACcitation   = "%%CITATION = 00776,145,01003;%%"
+}
+
+@article{Borione:1994iy,
+      author         = "Borione, A. and others",
+      title          = "{A Large air shower array to search for astrophysical
+                        sources emitting gamma-rays with energies >= \E{14}}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A346",
+      year           = "1994",
+      pages          = "329-352",
+      doi            = "10.1016/0168-9002(94)90722-6",
+      reportNumber   = "PRINT-94-0044 (EFI,CHICAGO)",
+      SLACcitation   = "%%CITATION = NUIMA,A346,329;%%"
+}
+
+@article{AbuZayyad:1999xa,
+      author         = "Abu-Zayyad, T. and others",
+      title          = "{Evidence for Changing of Cosmic Ray Composition between
+                        \E{17} and \E{18} from Multicomponent Measurements}",
+      collaboration  = "MIA, HiRes",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "84",
+      year           = "2000",
+      pages          = "4276-4279",
+      doi            = "10.1103/PhysRevLett.84.4276",
+      eprint         = "astro-ph/9911144",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      SLACcitation   = "%%CITATION = ASTRO-PH/9911144;%%"
+}
+
+@article{Aab:2014kda,
+      author         = "Aab, Alexander and others",
+      title          = "{Depth of maximum of air-shower profiles at the Pierre
+                        Auger Observatory. I. Measurements at energies above
+                        \E{17.8}}",
+      collaboration  = "Pierre Auger",
+      journal        = "Phys. Rev.",
+      volume         = "D90",
+      year           = "2014",
+      number         = "12",
+      pages          = "122005",
+      doi            = "10.1103/PhysRevD.90.122005",
+      eprint         = "1409.4809",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      reportNumber   = "FERMILAB-PUB-14-348-AD-AE-CD-TD",
+      SLACcitation   = "%%CITATION = ARXIV:1409.4809;%%"
+}
+
+@article{Aab:2014aea,
+      author         = "Aab, A. and others",
+      title          = "{Depth of maximum of air-shower profiles at the Pierre
+                        Auger Observatory. II. Composition implications}",
+      collaboration  = "Pierre Auger",
+      journal        = "Phys. Rev.",
+      volume         = "D90",
+      year           = "2014",
+      number         = "12",
+      pages          = "122006",
+      doi            = "10.1103/PhysRevD.90.122006",
+      eprint         = "1409.5083",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      reportNumber   = "FERMILAB-PUB-14-347-AD-AE-CD-TD",
+      SLACcitation   = "%%CITATION = ARXIV:1409.5083;%%"
+}
+
+@article{AbuZayyad:2000uu,
+      author         = "Abu-Zayyad, T. and others",
+      title          = "{The prototype high-resolution Fly's Eye cosmic ray
+                        detector}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A450",
+      year           = "2000",
+      pages          = "253-269",
+      doi            = "10.1016/S0168-9002(00)00307-7",
+      SLACcitation   = "%%CITATION = NUIMA,A450,253;%%"
+}
+
+@article{Baltrusaitis:1985mx,
+      author         = "Baltrusaitis, R. M. and others",
+      title          = "{THE UTAH FLY'S EYE DETECTOR}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A240",
+      year           = "1985",
+      pages          = "410-428",
+      doi            = "10.1016/0168-9002(85)90658-8",
+      SLACcitation   = "%%CITATION = NUIMA,A240,410;%%"
+}
+
+@article{Budnev:2009mc,
+      author         = "Budnev, N. M. and others",
+      title          = "{The Cosmic Ray Mass Composition in the Energy Range
+                        \E{15} - \E{18} measured with the Tunka Array: Results
+                        and Perspectives}",
+      booktitle      = "{Proceedings, Cosmic Ray International Seminars: Origin,
+                        Mass Composition and Acceleration Mechanisms of UHECRs
+                        (CRIS 2008): Malfa, Salina Island, Italy, 15-19 September
+                        2008}",
+      journal        = "Nucl. Phys. Proc. Suppl.",
+      volume         = "190",
+      year           = "2009",
+      pages          = "247-252",
+      doi            = "10.1016/j.nuclphysbps.2009.03.095",
+      eprint         = "0902.3156",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:0902.3156;%%"
+}
+
+@article{AbuZayyad:2000ay,
+      author         = "Abu-Zayyad, T. and others",
+      title          = "{Measurement of the cosmic ray energy spectrum and
+                        composition from \E{17} to 1\E{18.3} using a hybrid
+                        fluorescence technique}",
+      collaboration  = "HiRes-MIA",
+      journal        = "Astrophys. J.",
+      volume         = "557",
+      year           = "2001",
+      pages          = "686-699",
+      doi            = "10.1086/322240",
+      eprint         = "astro-ph/0010652",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      SLACcitation   = "%%CITATION = ASTRO-PH/0010652;%%"
+}
+
+
+@article{ThePierreAuger:2015rma,
+      author         = "Aab, Alexander and others",
+      title          = "{The Pierre Auger Cosmic Ray Observatory}",
+      collaboration  = "Pierre Auger",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A798",
+      year           = "2015",
+      pages          = "172-213",
+      doi            = "10.1016/j.nima.2015.06.058",
+      eprint         = "1502.01323",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.IM",
+      reportNumber   = "FERMILAB-PUB-15-034-AD-AE-CD-TD",
+      SLACcitation   = "%%CITATION = ARXIV:1502.01323;%%"
+}
+
 @article{Kampert:2012mx,
       author         = "Kampert, Karl-Heinz and Unger, Michael",
       title          = "{Measurements of the Cosmic Ray Composition with Air
