--- a/main.tex
+++ b/main.tex
@@ -102,8 +102,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-
-
 % ---
 % compila o sumário e índice
 \makeindex
@@ -274,13 +272,11 @@
 
 \include{introduction}
 
-\include{uhecr}
+%\include{uhecr}
 
 \include{showers}
 
-\include{auger}
-
-%\include{shine}
+%\include{auger}
 
 \include{interpetration}
 
